fix: letter spacing

--- a/src/tolki-chat/tolki-chat.scss
+++ b/src/tolki-chat/tolki-chat.scss
@@ -23,6 +23,7 @@ $brand-dot-size: $toggle-btn-size * 0.12;
   flex-direction: column;
   font-family: "Inter", sans-serif;
   font-size: 16px;
+  letter-spacing: normal;
   pointer-events: none;
   right: $margin;
 
